@@ -44,11 +44,12 @@ zero). Work-in-progress APIs can change at any time.
     * [Example: Assert](/examples/assert.c)
     * [Example: Panic](/examples/panic.c)
   * Stack trace *(planned)*
-  * [Mutex](/include/kernaux/mutex.h) (*non-breaking since* **?.?.?**)
   * [Input/output](/include/kernaux/io.h) (*work in progress*)
   * Architecture-specific code (*work in progress*)
     * [Declarations](/include/kernaux/arch/)
     * [Functions](/include/kernaux/asm/)
+* Generic types
+  * [Mutex](/include/kernaux/generic/mutex.h) (*non-breaking since* **?.?.?**)
 * Device drivers (for debugging only)
   * [Serial console](/include/kernaux/console.h) (*work in progress*)
   * [Framebuffer](/include/kernaux/framebuffer.h) (*planned*)
@@ -94,7 +95,10 @@ zero). Work-in-progress APIs can change at any time.
 Define the following C preprocessor macros before including `<kernaux.h>` and
 `<kernaux/*.h>` files. They have effect on your code, not the library code.
 
-* `KERNAUX_DEBUG` - enable assertions
+* `KERNAUX_DEBUG` - enable assertions.
+* `KERNAUX_ACCESS_PRIVATE` - disable access modifier "private". Don't do this!
+* `KERNAUX_ACCESS_PROTECTED` - disable access modifier "protected". Only do this
+  (with `#define`) in a file where you implement an inherited type.
 
 ### Global variables
 
