@@ -45,6 +45,14 @@ fprintf_va_SOURCES = main.c fprintf_va.c
 endif
 endif
 
+#################
+# generic_mutex #
+#################
+
+TESTS += generic_mutex
+generic_mutex_LDADD = $(top_builddir)/libkernaux.la
+generic_mutex_SOURCES = main.c generic_mutex.c
+
 ##########
 # memmap #
 ##########
