@@ -5,15 +5,14 @@
 extern "C" {
 #endif
 
-#define KERNAUX_MUTEX_EXTRA_DATA_SIZE (32)
+#include <kernaux/macro.h>
 
-typedef void (*KernAux_Mutex_Lock  )(void *extra_data);
-typedef void (*KernAux_Mutex_Unlock)(void *extra_data);
+typedef void (*KernAux_Mutex_Lock  )(void *mutex);
+typedef void (*KernAux_Mutex_Unlock)(void *mutex);
 
 typedef struct KernAux_Mutex {
-    KernAux_Mutex_Lock lock;
-    KernAux_Mutex_Unlock unlock;
-    char extra_data[KERNAUX_MUTEX_EXTRA_DATA_SIZE];
+    KernAux_Mutex_Lock   KERNAUX_PROTECTED_FIELD(lock);
+    KernAux_Mutex_Unlock KERNAUX_PROTECTED_FIELD(unlock);
 } *KernAux_Mutex;
 
 void KernAux_Mutex_lock  (KernAux_Mutex mutex);
