@@ -3,14 +3,14 @@
 #endif
 
 #include <kernaux/assert.h>
-#include <kernaux/mutex.h>
+#include <kernaux/generic/mutex.h>
 
 void KernAux_Mutex_lock(const KernAux_Mutex mutex)
 {
     KERNAUX_ASSERT(mutex);
     KERNAUX_ASSERT(mutex->lock);
 
-    mutex->lock(mutex->extra_data);
+    mutex->lock(mutex);
 }
 
 void KernAux_Mutex_unlock(const KernAux_Mutex mutex)
@@ -18,5 +18,5 @@ void KernAux_Mutex_unlock(const KernAux_Mutex mutex)
     KERNAUX_ASSERT(mutex);
     KERNAUX_ASSERT(mutex->unlock);
 
-    mutex->unlock(mutex->extra_data);
+    mutex->unlock(mutex);
 }
